kubelet、proxy、svc/postStart.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec: 
  containers:
    - name: lifecycle-demo-container
      image: nginx
      lifecycle:
        postStart: 
          exec: 
          command: ["/bin/sh","-c","echo hello from the post start handler > /var/log/msg"]
        preStop: 
          exec: 
          command: ["/usr/sbin/nginx","-s","quit"]  # 也可以为备份数据等
