kubelet、proxy、svc/externalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc-externalname
  namespace: p
spec:
  selector:
    app: myapp
  externalName: mysvc-externalname.com
