kubelet、proxy、svc/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations: 
    kubernetes.io/ingress.class: "nginx" # 指定ingress需要被那个Controller处理，这里是nginx的Controller
spec:
  tls: 
    - hosts: 
        - xxx.com
      secretName: ingress-tls
  rules:
  - host: xxx.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
